infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  replicas: 1 # number of pods to run
  selector:
    matchLabels: #Tell deployment how to find all the pods that it's going to create
      app: expiration
  template: # How to create each individual pods
    metadata:
      labels:
        app: expiration
    spec: #Tell the pod how to behave
      containers:
        - name: expiration # only for logging
          #image: us.gcr.io/ticket-dev-337200/auth gcloud build
          image: orion232/expiration
