infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1 # number of pods to run
  selector:
    matchLabels: #Tell deployment how to find all the pods that it's going to create
      app: payments
  template: # How to create each individual pods
    metadata:
      labels:
        app: payments
    spec: #Tell the pod how to behave
      containers:
        - name: payments # only for logging
          #image: us.gcr.io/ticket-dev-337200/auth gcloud build
          image: orion232/payments
---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec: #tell services how to behave
  selector: #how to find pod that govern access to
    app: payments
  type: ClusterIP
  ports: #ports to expose
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
