infra/k8s/payments-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-mongo-depl
spec:
  replicas: 1
  selector: # how the deployment find the pod
    matchLabels:
      app: payments-mongo
  template:
    metadata:
      labels: # the label been applied to the pod
        app: payments-mongo
    spec:
      containers:
        - name: payments-mongo
          image: mongo
#Cluster ip service for mongo
---
apiVersion: v1
kind: Service
metadata:
  name: payments-mongo-srv #domain name
spec:
  selector: #find the pod with label of auth-mongo
    app: payments-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
