infra/k8s/tickets-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo-depl
spec:
  replicas: 1
  selector: # how the deployment find the pod
    matchLabels:
      app: tickets-mongo
  template:
    metadata:
      labels: # the label been applied to the pod
        app: tickets-mongo
    spec:
      containers:
        - name: tickets-mongo
          image: mongo
#Cluster ip service for mongo
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-srv #domain name
spec:
  selector: #find the pod with label of auth-mongo
    app: tickets-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
