infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true" #expect differect path in regx
spec:
  rules:
    - host: ticketing.dev #'pretend' domain name, only connect from local machine
      http:
        paths: #incomming request will be match in ORDER
          - path: /api/users/?(.*) #/api/user/anything
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/tickets/?(.*)
            pathType: Prefix
            backend:
              service:
                name: tickets-srv
                port:
                  number: 3000
          - path: /?(.*) #catch all route
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
